# grpc-hub

./: Cargo.toml  README.md  TODO.txt  build.rs
frontend/src/: App.css  App.tsx
frontend/src/hooks/: useEventSource.ts
grpc-hub-connector/: Cargo.toml  INTEGRATION.md  README.md  build.rs
grpc-hub-connector/examples/: basic_usage.rs  service_example.rs
grpc-hub-connector/proto/: hub.proto
grpc-hub-connector/src/: lib.rs
proto/: dividend_service.proto  hub.proto  order_service.proto  user_service.proto  web_content_extract.proto
src/: grpc_hub_connector.rs  grpc_hub_connector_example.rs  main.rs
