[workspace]
members = [
    ".",
    "grpc-hub-connector"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/grpc-hub"
keywords = ["grpc", "hub", "microservices", "service-discovery"]
categories = ["network-programming", "web-programming::http-server"]

[package]
name = "grpc-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
grpc-hub-connector = { path = "grpc-hub-connector" }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
async-stream = "0.3"
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
prost-reflect = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"
hyper-util = "0.1"
http-body-util = "0.1"
axum = "0.7"
tokio-util = "0.7"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tonic-build = "0.12"