[package]
name = "grpc-hub-connector"
version = "0.1.0"
edition = "2021"
description = "A reusable connector for discovering and connecting to services through the gRPC hub"
license = "MIT"
repository = "https://github.com/yourusername/grpc-hub"
keywords = ["grpc", "hub", "connector", "service-discovery"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"
hyper-util = "0.1"
http-body-util = "0.1"
axum = "0.7"
tokio-util = "0.7"

[build-dependencies]
tonic-build = "0.12"

[lib]
name = "grpc_hub_connector"
path = "src/lib.rs"
